--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ var title = L.control();
 title.onAdd = function (map) {
  var div = L.DomUtil.create('div', 'info');
  div.innerHTML +=
- '<h2>Densidad poblacional AMSS</h2>Censo 2007';
+ '<h2>Rios, mapas y cerros</h2>GEOSERVER';
  return div;
 };
 title.addTo(map);
